# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = iqm-client
description = A client library for accessing an IQM quantum computer
author = IQM developers
author_email = developers@meetiqm.com
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/iqm-finland/iqm-client
project_urls =
    Documentation = https://iqm-finland.github.io/iqm-client
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = ~= 3.9

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    requests == 2.26.0
    pydantic >= 1.8.2, < 2.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install iqm_client[dev,docs,testing]`
dev =
    tox == 3.25.0
docs =
    sphinx == 4.5.0
    sphinx-book-theme == 0.3.2
testing =
    isort == 5.10.1
    mypy == 0.942
    pytest == 7.1.1
    pytest-cov == 3.0.0
    pytest-isort == 3.0.0
    pytest-mypy == 0.9.1
    pytest-pylint == 0.18.0
    jsons==1.6.1
    jsonschema==4.4.0
    mockito==1.3.0
cicd =
    twine >= 3.3.0, < 4.0
    wheel >= 0.36.2, < 1.0
